kubernetes_OLD/yml/kerberos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kerberos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kerberos
  template:
    metadata:
      labels:
        app: kerberos
      annotations:
    spec:
      containers:
      - name: kerberos
        image: marcinkasinski/krb5-server
        imagePullPolicy: Always
        ports:
        - name: kdc-tcp
          containerPort: 88
          protocol: TCP
        - name: kdc-udp
          containerPort: 88
          protocol: UDP
        volumeMounts:
        - name: config-volume-kdc-conf-cm
          mountPath: /etc/krb5kdc/kdc.conf
          subPath: kdc.conf
        - name: config-volume-kadm5-acl-cm
          mountPath: /etc/krb5kdc/kadm5.acl
          subPath: kadm5.acl
        - name: config-volume-krb5-conf-cm
          mountPath: /etc/krb5.conf
          subPath: krb5.conf
      volumes:
        - name: config-volume-kdc-conf-cm
          configMap:
            name: kdc-conf-cm          
        - name: config-volume-kadm5-acl-cm
          configMap:
            name: kadm5-acl-cm          
        - name: config-volume-krb5-conf-cm
          configMap:
            name: krb5-conf-cm          
---
apiVersion: v1
kind: Service
metadata:
  name: kerberos
spec:
  type: NodePort
  ports:
  - name: kdc
    port: 88
    targetPort: 88
  - name: web
    port: 9001
    targetPort: 9001
    protocol: TCP
  selector:
    app: kerberos
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kerberos-ingress
  annotations:
spec:
  rules:
  - host: kerberos
    http:
      paths:
      - path: /
        backend:
          serviceName: kerberos
          servicePort: 9001
